--- a/housing-prices-project-2.ipynb
+++ b/housing-prices-project-2.ipynb
@@ -29,7 +29,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Project Title"
+        "# Housing Prices\n",
+        "## Project 2\n",
+        "***\n",
+        "##### James Gumtau, Oct 2024. Cohort 15."
       ],
       "metadata": {
         "id": "cJG_e1vK2NMI"
@@ -47,7 +50,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[link text](https://)The goal is to take data regarding homes in 2006-2010 and predict how much houses with similar features will cost in the following years based on this data. This is classified as a regression problem due to the target value being a number."
+        "The goal is to take data regarding homes in 2006-2010 and predict how much houses with similar features will cost in the following years based on this data. This is classified as a regression problem due to the target value being a number."
       ],
       "metadata": {
         "id": "DJB41zc-2q-w"
